--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>  
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -52,19 +52,17 @@
       animation: fadeInUp 1.5s ease-in-out;
     }
 
-nav {
-  background: #1a1a1a;
-  display: flex;
-  justify-content: center;
-  gap: 25px;
-  padding: 15px 0;
-  box-shadow: 0 2px 6px rgba(255, 215, 0, 0.15);
-  position: fixed; /* Changed from sticky to fixed */
-  top: 0;
-  width: 100%;
-  z-index: 1000;
-}
-
+    nav {
+      background: #1a1a1a;
+      display: flex;
+      justify-content: center;
+      gap: 25px;
+      padding: 15px 0;
+      box-shadow: 0 2px 6px rgba(255, 215, 0, 0.15);
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
 
     nav button {
       background: none;
@@ -88,13 +86,12 @@ nav {
       color: #fff;
     }
 
-main {
-  max-width: 1000px;
-  margin: 100px auto 50px; /* Added top margin to avoid overlap */
-  padding: 0 20px;
-  text-align: left;
-}
-
+    main {
+      max-width: 1000px;
+      margin: 50px auto;
+      padding: 0 20px;
+      text-align: left;
+    }
 
     .home-section {
       display: flex;
@@ -469,6 +466,18 @@ main {
       // Simulate redirect or payment process here
       // window.location.href = "https://www.paypal.com/checkoutnow";
     }
+        // SCROLL-HIDE NAVBAR BEHAVIOR
+    let lastScrollY = window.scrollY;
+    const nav = document.querySelector("nav");
+
+    window.addEventListener("scroll", () => {
+      if (window.scrollY > lastScrollY) {
+        nav.style.top = "-80px"; // Hides nav on scroll down
+      } else {
+        nav.style.top = "0"; // Shows nav on scroll up
+      }
+      lastScrollY = window.scrollY;
+    });
   </script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
