--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
           <div class="video-section">
             <div class="video-container">
               <h3>📺 Advertisement</h3>
-              <iframe src="https://www.youtube.com/embed/YOUR_AD_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+              <iframe src="https://youtu.be/dRQMivmMbBs" frameborder="0" allowfullscreen></iframe>
               <p class="video-description">Discover how Stylex transforms the salon experience with AI-powered hair diagnostics and real-time hairstyle previews.</p>
             </div>
 
@@ -466,18 +466,7 @@
       // Simulate redirect or payment process here
       // window.location.href = "https://www.paypal.com/checkoutnow";
     }
-        // SCROLL-HIDE NAVBAR BEHAVIOR
-    let lastScrollY = window.scrollY;
-    const nav = document.querySelector("nav");
-
-    window.addEventListener("scroll", () => {
-      if (window.scrollY > lastScrollY) {
-        nav.style.top = "-80px"; // Hides nav on scroll down
-      } else {
-        nav.style.top = "0"; // Shows nav on scroll up
-      }
-      lastScrollY = window.scrollY;
-    });
+    
   </script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
