--- a/index.html
+++ b/index.html
@@ -360,12 +360,22 @@
             Stylex is a new and improved technology designed specifically for salons. It combines a mirror and touch-screen TV with AI technology that identifies your unique hair type and color by analyzing a strand of your hair through the software. Once your hair is identified, the system provides the stylist with the exact chemicals and precise percentages needed to achieve your desired hair color. It also recommends the best products for your hair type and displays various hairstyle options directly in the mirror to help you visualize what would look best.
           </p>
 
-          <div class="video-section">
-            <div class="video-container">
-              <h3>📺 Advertisement</h3>
-              <iframe src="https://youtu.be/dRQMivmMbBs" frameborder="0" allowfullscreen></iframe>
-              <p class="video-description">Discover how Stylex transforms the salon experience with AI-powered hair diagnostics and real-time hairstyle previews.</p>
-            </div>
+         <div class="video-section">
+  <div class="video-container">
+    <h3>📺 Advertisement</h3>
+    <iframe 
+      width="560" 
+      height="315" 
+      src="https://www.youtube.com/embed/dRQMivmMbBs" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen>
+    </iframe>
+    <p class="video-description">
+      Discover how Stylex transforms the salon experience with AI-powered hair diagnostics and real-time hairstyle previews.
+    </p>
+  </div>
+</div>
 
             <div class="video-container">
               <h3>🎙️ Interview with Customer</h3>
