--- a/index.html
+++ b/index.html
@@ -361,16 +361,13 @@
           </p>
 
          <div class="video-section">
+<div class="video-section">
   <div class="video-container">
     <h3>📺 Advertisement</h3>
-    <iframe 
-      width="560" 
-      height="315" 
-      src="https://www.youtube.com/embed/dRQMivmMbBs" 
-      frameborder="0" 
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-      allowfullscreen>
-    </iframe>
+    <video width="560" height="315" controls>
+      <source src="StylexAD.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
     <p class="video-description">
       Discover how Stylex transforms the salon experience with AI-powered hair diagnostics and real-time hairstyle previews.
     </p>
